--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- CHALET -->
     <div class="card">
-      <img src="images/chalet-exterieur.jpg" alt="Chalet à Gérardmer">
+      <img src="img/Designer.png" alt="Chalet à Gérardmer">
       <h3>Chalet cocooning</h3>
       <p>👥 Jusqu’à 6 personnes</p>
       <p>🏡 Type : Chalet</p>
@@ -58,7 +58,7 @@
 
     <!-- MAISON -->
     <div class="card">
-      <img src="images/maison-exterieur.jpg" alt="Maison à Gérardmer">
+      <img src="img/Designer.png" alt="Maison à Gérardmer">
       <h3>Maison familiale</h3>
       <p>👥 Jusqu’à 8 personnes</p>
       <p>🏠 Type : Maison</p>
@@ -73,9 +73,9 @@
   <h2>Chalet cocooning</h2>
 
   <div class="gallery">
-    <img src="images/chalet-interieur1.jpg" alt="">
-    <img src="images/chalet-interieur1.jpg" alt="">
-    <img src="images/chalet-interieur1.jpg" alt="">
+    <img src="img/Designer.png" alt="">
+    <img src="img/Designer.png" alt="">
+    <img src="img/Designer.png" alt="">
   </div>
 
   <p>
@@ -98,9 +98,9 @@
   <h2>Maison familiale</h2>
 
   <div class="gallery">
-    <img src="images/maison-interieur1.jpg" alt="">
-    <img src="images/maison-interieur1.jpg" alt="">
-    <img src="images/maison-interieur1.jpg" alt="">
+    <img src="img/Designer.png" alt="">
+    <img src="img/Designer.png" alt="">
+    <img src="img/Designer.png" alt="">
   </div>
 
   <p>
