--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Locations de charme à Gérardmer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Location saisonnière de charme à Gérardmer – Chalet et Maison premium">
+  <meta name="description" content="Location saisonnière à Gérardmer – Chalet et Maison premium">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -22,22 +22,22 @@
   </div>
 </nav>
 
-<!-- HERO / ACCUEIL -->
+<!-- HERO -->
 <header id="accueil" class="hero">
   <div class="overlay">
     <h1>Locations de charme à Gérardmer</h1>
-    <p>Chalet & Maison – Séjours cocooning au cœur des Vosges</p>
-    <a href="#logements" class="btn-primary">Voir les logements</a>
+    <p>Chalet & Maison – Ambiance cocooning dans les Vosges</p>
+    <a href="#logements" class="btn-primary">Découvrir les logements</a>
   </div>
 </header>
 
-<!-- SECTION PRÉSENTATION -->
+<!-- PRESENTATION -->
 <section class="section">
-  <h2>Un séjour authentique à Gérardmer</h2>
+  <h2>Un séjour nature & confort</h2>
   <p style="text-align:center; max-width:800px; margin:auto;">
-    Entre lac et montagnes, nos logements vous offrent une expérience unique,
-    mêlant confort premium, charme montagnard et calme absolu.
-    Idéal pour se ressourcer en famille ou entre amis.
+    Nos logements vous accueillent à Gérardmer pour un séjour reposant,
+    entre lac, montagnes et forêts. Idéal pour les familles et les amoureux
+    de la nature.
   </p>
 </section>
 
@@ -53,7 +53,7 @@
       <h3>Chalet cocooning</h3>
       <p>👥 Jusqu’à 6 personnes</p>
       <p>🏡 Type : Chalet</p>
-      <a href="#chalet" class="btn-secondary">Découvrir</a>
+      <a href="#chalet" class="btn-secondary">Voir le détail</a>
     </div>
 
     <!-- MAISON -->
@@ -62,13 +62,13 @@
       <h3>Maison familiale</h3>
       <p>👥 Jusqu’à 8 personnes</p>
       <p>🏠 Type : Maison</p>
-      <a href="#maison" class="btn-secondary">Découvrir</a>
+      <a href="#maison" class="btn-secondary">Voir le détail</a>
     </div>
 
   </div>
 </section>
 
-<!-- DÉTAIL CHALET -->
+<!-- DETAIL CHALET -->
 <section id="chalet" class="section">
   <h2>Chalet cocooning</h2>
 
@@ -80,20 +80,29 @@
 
   <p>
     Chalet chaleureux avec décoration bois, ambiance cocooning,
-    terrasse privée et cadre naturel exceptionnel.
+    terrasse et vue nature. Idéal pour se ressourcer.
   </p>
 
-  <h3>Disponibilités & réservation</h3>
-  <iframe
-    src="https://www.beds24.com/booking2.php?propid=XXXXXX"
-    width="100%"
-    height="600"
-    frameborder="0"
-    loading="lazy">
-  </iframe>
+  <h3>Vérifier les disponibilités</h3>
+
+  <form class="booking-form">
+    <label>
+      Date d’arrivée
+      <input type="date" required>
+    </label>
+
+    <label>
+      Date de départ
+      <input type="date" required>
+    </label>
+
+    <button type="submit" class="btn-primary">
+      Vérifier la disponibilité
+    </button>
+  </form>
 </section>
 
-<!-- DÉTAIL MAISON -->
+<!-- DETAIL MAISON -->
 <section id="maison" class="section section-light">
   <h2>Maison familiale</h2>
 
@@ -104,31 +113,40 @@
   </div>
 
   <p>
-    Maison spacieuse et lumineuse, parfaite pour des vacances conviviales,
-    proche du lac et des activités principales de Gérardmer.
+    Maison spacieuse et confortable, parfaite pour les familles,
+    proche du lac et des activités de Gérardmer.
   </p>
 
-  <h3>Disponibilités & réservation</h3>
-  <iframe
-    src="https://www.beds24.com/booking2.php?propid=YYYYYY"
-    width="100%"
-    height="600"
-    frameborder="0"
-    loading="lazy">
-  </iframe>
+  <h3>Vérifier les disponibilités</h3>
+
+  <form class="booking-form">
+    <label>
+      Date d’arrivée
+      <input type="date" required>
+    </label>
+
+    <label>
+      Date de départ
+      <input type="date" required>
+    </label>
+
+    <button type="submit" class="btn-primary">
+      Vérifier la disponibilité
+    </button>
+  </form>
 </section>
 
-<!-- ACTIVITÉS -->
+<!-- ACTIVITES -->
 <section id="activites" class="section">
   <h2>À proximité</h2>
 
   <ul class="activities">
     <li>🌲 Randonnées et balades en forêt</li>
-    <li>🚣 Lac de Gérardmer (baignade, pédalo)</li>
-    <li>⛷️ Ski alpin et nordique (La Mauselaine)</li>
+    <li>🚣 Lac de Gérardmer</li>
+    <li>⛷️ Ski et sports d’hiver</li>
     <li>🚴 VTT et vélo de montagne</li>
-    <li>🍽️ Restaurants & spécialités vosgiennes</li>
-    <li>🧖 Spas, bien-être et détente</li>
+    <li>🍽️ Restaurants & gastronomie locale</li>
+    <li>🧖 Bien-être & spas</li>
   </ul>
 </section>
 
