--- a/index.html
+++ b/index.html
@@ -10,144 +10,32 @@
 
 <body>
 
-<!-- NAVIGATION -->
 <nav class="navbar">
   <div class="nav-container">
     <div class="logo">Gérardmer Locations</div>
     <ul class="nav-links">
-      <li><a href="#accueil">Accueil</a></li>
-      <li><a href="#logements">Logements</a></li>
-      <li><a href="#activites">À proximité</a></li>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="logements.html">Logements</a></li>
+      <li><a href="proximite.html">À proximité</a></li>
     </ul>
   </div>
 </nav>
 
-<!-- HERO -->
-<header id="accueil" class="hero">
+<header class="hero">
   <div class="overlay">
     <h1>Locations de charme à Gérardmer</h1>
-    <p>Chalet & Maison – Ambiance cocooning dans les Vosges</p>
-    <a href="#logements" class="btn-primary">Découvrir les logements</a>
+    <p>Chalet & Maison – Séjours cocooning au cœur des Vosges</p>
+    <a href="logements.html" class="btn-primary">Découvrir nos logements</a>
   </div>
 </header>
 
-<!-- PRESENTATION -->
 <section class="section">
   <h2>Un séjour nature & confort</h2>
   <p style="text-align:center; max-width:800px; margin:auto;">
-    Nos logements vous accueillent à Gérardmer pour un séjour reposant,
-    entre lac, montagnes et forêts. Idéal pour les familles et les amoureux
-    de la nature.
+    Profitez d’un cadre exceptionnel entre lac et montagnes.
+    Nos logements vous offrent calme, confort premium et ambiance chaleureuse
+    pour un séjour inoubliable à Gérardmer.
   </p>
-</section>
-
-<!-- LOGEMENTS -->
-<section id="logements" class="section section-light">
-  <h2>Nos logements</h2>
-
-  <div class="cards">
-
-    <!-- CHALET -->
-    <div class="card">
-      <img src="img/Designer.png" alt="Chalet à Gérardmer">
-      <h3>Chalet cocooning</h3>
-      <p>👥 Jusqu’à 6 personnes</p>
-      <p>🏡 Type : Chalet</p>
-      <a href="#chalet" class="btn-secondary">Voir le détail</a>
-    </div>
-
-    <!-- MAISON -->
-    <div class="card">
-      <img src="img/Designer.png" alt="Maison à Gérardmer">
-      <h3>Maison familiale</h3>
-      <p>👥 Jusqu’à 8 personnes</p>
-      <p>🏠 Type : Maison</p>
-      <a href="#maison" class="btn-secondary">Voir le détail</a>
-    </div>
-
-  </div>
-</section>
-
-<!-- DETAIL CHALET -->
-<section id="chalet" class="section">
-  <h2>Chalet cocooning</h2>
-
-  <div class="gallery">
-    <img src="img/Designer.png" alt="">
-    <img src="img/Designer.png" alt="">
-    <img src="img/Designer.png" alt="">
-  </div>
-
-  <p>
-    Chalet chaleureux avec décoration bois, ambiance cocooning,
-    terrasse et vue nature. Idéal pour se ressourcer.
-  </p>
-
-  <h3>Vérifier les disponibilités</h3>
-
-  <form class="booking-form">
-    <label>
-      Date d’arrivée
-      <input type="date" required>
-    </label>
-
-    <label>
-      Date de départ
-      <input type="date" required>
-    </label>
-
-    <button type="submit" class="btn-primary">
-      Vérifier la disponibilité
-    </button>
-  </form>
-</section>
-
-<!-- DETAIL MAISON -->
-<section id="maison" class="section section-light">
-  <h2>Maison familiale</h2>
-
-  <div class="gallery">
-    <img src="img/Designer.png" alt="">
-    <img src="img/Designer.png" alt="">
-    <img src="img/Designer.png" alt="">
-  </div>
-
-  <p>
-    Maison spacieuse et confortable, parfaite pour les familles,
-    proche du lac et des activités de Gérardmer.
-  </p>
-
-  <h3>Vérifier les disponibilités</h3>
-
-  <form class="booking-form">
-    <label>
-      Date d’arrivée
-      <input type="date" required>
-    </label>
-
-    <label>
-      Date de départ
-      <input type="date" required>
-    </label>
-
-    <button type="submit" class="btn-primary">
-      Vérifier la disponibilité
-    </button>
-  </form>
-</section>
-
-<!-- ACTIVITES -->
-<section id="activites" class="section">
-  <h2>À proximité</h2>
-
-  <ul class="activities">
-    <li>🌲 Randonnées et balades en forêt</li>
-    <li>🚣 Lac de Gérardmer</li>
-    <li>⛷️ Ski et sports d’hiver</li>
-    <li>🚴 VTT et vélo de montagne</li>
-    <li>🍽️ Restaurants & gastronomie locale</li>
-    <li>🧖 Bien-être & spas</li>
-  </ul>
 </section>
 
 <footer>
