--- a/logements.html
+++ b/logements.html
@@ -25,73 +25,25 @@
 
   <div class="cards">
 
+    <!-- CHALET -->
     <div class="card">
-      <img src="img/Designer.png" alt="Chalet Gérardmer">
+      <img src="img/Designer.png" alt="Chalet à Gérardmer">
       <h3>Chalet cocooning</h3>
       <p>👥 Jusqu’à 6 personnes</p>
-      <p>🏡 Chalet tout confort</p>
+      <p>🏡 Type : Chalet</p>
+      <a href="chalet.html" class="btn-secondary">Voir le détail</a>
     </div>
 
+    <!-- MAISON -->
     <div class="card">
-      <img src="img/Designer.png" alt="Maison Gérardmer">
+      <img src="img/Designer.png" alt="Maison à Gérardmer">
       <h3>Maison familiale</h3>
       <p>👥 Jusqu’à 8 personnes</p>
-      <p>🏠 Maison spacieuse</p>
+      <p>🏠 Type : Maison</p>
+      <a href="maison.html" class="btn-secondary">Voir le détail</a>
     </div>
 
   </div>
-</section>
-
-<!-- CHALET -->
-<section class="section section-light">
-  <h2>Chalet cocooning</h2>
-
-  <div class="gallery">
-    <img src="img/Designer.png" alt="">
-    <img src="img/Designer.png" alt="">
-    <img src="img/Designer.png" alt="">
-  </div>
-
-  <p>
-    Chalet chaleureux à l’ambiance bois, parfait pour un séjour détente
-    en pleine nature vosgienne.
-  </p>
-
-  <form class="booking-form">
-    <label>Date d’arrivée
-      <input type="date" required>
-    </label>
-    <label>Date de départ
-      <input type="date" required>
-    </label>
-    <button class="btn-primary">Vérifier la disponibilité</button>
-  </form>
-</section>
-
-<!-- MAISON -->
-<section class="section">
-  <h2>Maison familiale</h2>
-
-  <div class="gallery">
-    <img src="img/Designer.png" alt="">
-    <img src="img/Designer.png" alt="">
-    <img src="img/Designer.png" alt="">
-  </div>
-
-  <p>
-    Maison spacieuse idéale pour les familles ou groupes d’amis,
-    proche du lac et des commodités.
-  </p>
-
-  <form class="booking-form">
-    <label>Date d’arrivée
-      <input type="date" required>
-    </label>
-    <label>Date de départ
-      <input type="date" required>
-    </label>
-    <button class="btn-primary">Vérifier la disponibilité</button>
-  </form>
 </section>
 
 <footer>
