--- a/logements.html
+++ b/logements.html
@@ -2,52 +2,52 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Nos logements – Gérardmer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Logements – Gérardmer</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
-<nav class="navbar">
-  <div class="nav-container">
-    <div class="logo">Gérardmer Locations</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="logements.html">Logements</a></li>
-      <li><a href="proximite.html">À proximité</a></li>
-    </ul>
-  </div>
-</nav>
+<header>
+  <nav class="navbar">
+    <strong>Gérardmer Locations</strong>
+    <div>
+      <a href="index.html">Accueil</a>
+      <a href="logements.html">Logements</a>
+      <a href="proximite.html">À proximité</a>
+    </div>
+  </nav>
+</header>
 
-<section class="section" style="margin-top:70px;">
+<main>
+<section>
   <h2>Nos logements</h2>
 
   <div class="cards">
-
-    <!-- CHALET -->
     <div class="card">
-      <img src="img/Designer.png" alt="Chalet à Gérardmer">
-      <h3>Chalet cocooning</h3>
-      <p>👥 Jusqu’à 6 personnes</p>
-      <p>🏡 Type : Chalet</p>
-      <a href="chalet.html" class="btn-secondary">Voir le détail</a>
+      <img src="img/Designer.png" alt="">
+      <div class="card-content">
+        <h3>Chalet cocooning</h3>
+        <p>👥 Jusqu'à 6 personnes</p>
+        <p>🏡 Type : Chalet</p>
+        <a class="btn" href="chalet.html">Voir le détail</a>
+      </div>
     </div>
 
-    <!-- MAISON -->
     <div class="card">
-      <img src="img/Designer.png" alt="Maison à Gérardmer">
-      <h3>Maison familiale</h3>
-      <p>👥 Jusqu’à 8 personnes</p>
-      <p>🏠 Type : Maison</p>
-      <a href="maison.html" class="btn-secondary">Voir le détail</a>
+      <img src="img/Designer.png" alt="">
+      <div class="card-content">
+        <h3>Maison familiale</h3>
+        <p>👥 Jusqu'à 8 personnes</p>
+        <p>🏠 Type : Maison</p>
+        <a class="btn" href="maison.html">Voir le détail</a>
+      </div>
     </div>
-
   </div>
 </section>
+</main>
 
 <footer>
-  <p>© 2025 – Locations de charme à Gérardmer</p>
+  © 2025 – Locations de charme à Gérardmer
 </footer>
 
 </body>
