--- a/logements.html
+++ b/logements.html
@@ -2,52 +2,50 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Logements – Gérardmer</title>
+  <title>Nos logements – Gérardmer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<header>
-  <nav class="navbar">
-    <strong>Gérardmer Locations</strong>
-    <div>
-      <a href="index.html">Accueil</a>
-      <a href="logements.html">Logements</a>
-      <a href="proximite.html">À proximité</a>
-    </div>
-  </nav>
-</header>
+<nav class="navbar">
+  <div class="nav-container">
+    <div class="logo">Gérardmer Locations</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="logements.html">Logements</a></li>
+      <li><a href="proximite.html">À proximité</a></li>
+    </ul>
+  </div>
+</nav>
 
-<main>
-<section>
+<section class="section">
   <h2>Nos logements</h2>
 
   <div class="cards">
     <div class="card">
-      <img src="img/Designer.png" alt="">
+      <img src="img/Designer.png" alt="Chalet">
       <div class="card-content">
-        <h3>Chalet cocooning</h3>
-        <p>👥 Jusqu'à 6 personnes</p>
-        <p>🏡 Type : Chalet</p>
-        <a class="btn" href="chalet.html">Voir le détail</a>
+        <h3>Le Chalet</h3>
+        <p>Chalet chaleureux avec vue montagne</p>
+        <a href="chalet.html" class="btn">Voir le détail</a>
       </div>
     </div>
 
     <div class="card">
-      <img src="img/Designer.png" alt="">
+      <img src="img/Designer.png" alt="Maison">
       <div class="card-content">
-        <h3>Maison familiale</h3>
-        <p>👥 Jusqu'à 8 personnes</p>
-        <p>🏠 Type : Maison</p>
-        <a class="btn" href="maison.html">Voir le détail</a>
+        <h3>La Maison</h3>
+        <p>Maison spacieuse proche du lac</p>
+        <a href="maison.html" class="btn">Voir le détail</a>
       </div>
     </div>
   </div>
 </section>
-</main>
 
 <footer>
-  © 2025 – Locations de charme à Gérardmer
+  <p>© 2025 – Locations de charme à Gérardmer</p>
 </footer>
 
 </body>
