--- a/chalet.html
+++ b/chalet.html
@@ -3,26 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Chalet cocooning – Gérardmer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-<header>
-  <nav class="navbar">
-    <strong>Gérardmer Locations</strong>
-    <div>
-      <a href="index.html">Accueil</a>
-      <a href="logements.html">Logements</a>
-      <a href="proximite.html">À proximité</a>
-    </div>
-  </nav>
-</header>
+<!-- NAVBAR (IDENTIQUE AUX AUTRES PAGES) -->
+<nav class="navbar">
+  <div class="nav-container">
+    <div class="logo">Gérardmer Locations</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="logements.html">Logements</a></li>
+      <li><a href="proximite.html">À proximité</a></li>
+    </ul>
+  </div>
+</nav>
 
-<main>
-<section>
+<main class="section">
   <h2>Chalet cocooning</h2>
 
-  <!-- GALERIE -->
+  <!-- GALERIE MOSAÏQUE -->
   <div class="gallery">
     <div class="gallery-main" onclick="openCarousel(0)">
       <img src="img/Designer.png" alt="Chalet Gérardmer">
@@ -34,45 +36,39 @@
   </div>
 
   <!-- INFOS -->
-  <h3>Informations générales</h3>
+  <h3>Informations</h3>
   <ul>
-    <li>👥 Capacité : jusqu’à 6 personnes</li>
-    <li>🛏️ Chambres : 3</li>
-    <li>🛁 Salle de bain : 1</li>
+    <li>👥 Jusqu’à 6 personnes</li>
+    <li>🛏️ 3 chambres</li>
+    <li>🛁 1 salle de bain</li>
     <li>🔥 Poêle à bois</li>
     <li>🌲 Terrasse avec vue forêt</li>
     <li>🚗 Parking privé</li>
-    <li>📍 Gérardmer – Vosges</li>
   </ul>
 
   <p>
     Chalet chaleureux et entièrement équipé, idéal pour un séjour cocooning
-    en couple, en famille ou entre amis au cœur des Vosges.
+    au cœur des Vosges, été comme hiver.
   </p>
 
   <!-- PLANNING -->
   <h3>Disponibilités</h3>
   <div class="planning">
-    <label>
-      Date d’arrivée :
+    <label>Arrivée :
       <input type="date">
     </label>
-
-    <label>
-      Date de départ :
+    <label>Départ :
       <input type="date">
     </label>
-
     <br><br>
     <a href="#" class="btn">Réserver</a>
   </div>
-</section>
 </main>
 
-<!-- CARROUSEL -->
+<!-- CARROUSEL MODAL -->
 <div id="carouselModal" class="carousel-modal">
   <span class="close" onclick="closeCarousel()">×</span>
-  <img id="carouselImage">
+  <img id="carouselImage" alt="">
   <button class="prev" onclick="changeImage(-1)">‹</button>
   <button class="next" onclick="changeImage(1)">›</button>
 </div>
@@ -85,9 +81,9 @@
   ];
   let currentIndex = 0;
 
-  function openCarousel(i) {
-    currentIndex = i;
-    document.getElementById("carouselImage").src = images[i];
+  function openCarousel(index) {
+    currentIndex = index;
+    document.getElementById("carouselImage").src = images[index];
     document.getElementById("carouselModal").style.display = "flex";
   }
 
@@ -95,8 +91,8 @@
     document.getElementById("carouselModal").style.display = "none";
   }
 
-  function changeImage(dir) {
-    currentIndex = (currentIndex + dir + images.length) % images.length;
+  function changeImage(direction) {
+    currentIndex = (currentIndex + direction + images.length) % images.length;
     document.getElementById("carouselImage").src = images[currentIndex];
   }
 </script>
