--- a/chalet.html
+++ b/chalet.html
@@ -1,105 +1,86 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chalet cocooning – Gérardmer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
+  <!-- Ton CSS -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
-<!-- NAVBAR (IDENTIQUE AUX AUTRES PAGES) -->
-<nav class="navbar">
-  <div class="nav-container">
-    <div class="logo">Gérardmer Locations</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="logements.html">Logements</a></li>
-      <li><a href="proximite.html">À proximité</a></li>
-    </ul>
-  </div>
-</nav>
-
-<main class="section">
-  <h2>Chalet cocooning</h2>
-
-  <!-- GALERIE MOSAÏQUE -->
-  <div class="gallery">
-    <div class="gallery-main" onclick="openCarousel(0)">
-      <img src="img/Designer.png" alt="Chalet Gérardmer">
+  <nav class="navbar">
+    <div class="nav-container">
+      <div class="logo">Gérardmer Locations</div>
+      <ul class="nav-links">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="logements.html">Logements</a></li>
+        <li><a href="proximite.html">À proximité</a></li>
+      </ul>
     </div>
-    <div class="gallery-side">
-      <img src="img/Designer.png" onclick="openCarousel(1)">
-      <img src="img/Designer.png" onclick="openCarousel(2)">
+  </nav>
+
+  <main class="section">
+    <h2>Chalet cocooning</h2>
+
+    <!-- ✅ Click only: pas de data-bs-ride + interval false -->
+    <div id="carouselChalet"
+         class="carousel slide"
+         data-bs-interval="false"
+         data-bs-touch="false"
+         data-bs-keyboard="false">
+
+      <!-- Indicateurs cliquables -->
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselChalet" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselChalet" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselChalet" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/Designer.png" class="d-block w-100" alt="Chalet – photo 1">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Photo 1</h5>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/Designer.png" class="d-block w-100" alt="Chalet – photo 2">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Photo 2</h5>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="img/Designer.png" class="d-block w-100" alt="Chalet – photo 3">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Photo 3</h5>
+          </div>
+        </div>
+      </div>
+
+      <!-- Contrôles -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselChalet" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Précédent</span>
+      </button>
+
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselChalet" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Suivant</span>
+      </button>
     </div>
-  </div>
+  </main>
 
-  <!-- INFOS -->
-  <h3>Informations</h3>
-  <ul>
-    <li>👥 Jusqu’à 6 personnes</li>
-    <li>🛏️ 3 chambres</li>
-    <li>🛁 1 salle de bain</li>
-    <li>🔥 Poêle à bois</li>
-    <li>🌲 Terrasse avec vue forêt</li>
-    <li>🚗 Parking privé</li>
-  </ul>
+  <footer>© 2025 – Locations de charme à Gérardmer</footer>
 
-  <p>
-    Chalet chaleureux et entièrement équipé, idéal pour un séjour cocooning
-    au cœur des Vosges, été comme hiver.
-  </p>
-
-  <!-- PLANNING -->
-  <h3>Disponibilités</h3>
-  <div class="planning">
-    <label>Arrivée :
-      <input type="date">
-    </label>
-    <label>Départ :
-      <input type="date">
-    </label>
-    <br><br>
-    <a href="#" class="btn">Réserver</a>
-  </div>
-</main>
-
-<!-- CARROUSEL MODAL -->
-<div id="carouselModal" class="carousel-modal">
-  <span class="close" onclick="closeCarousel()">×</span>
-  <img id="carouselImage" alt="">
-  <button class="prev" onclick="changeImage(-1)">‹</button>
-  <button class="next" onclick="changeImage(1)">›</button>
-</div>
-
-<script>
-  const images = [
-    "img/Designer.png",
-    "img/Designer.png",
-    "img/Designer.png"
-  ];
-  let currentIndex = 0;
-
-  function openCarousel(index) {
-    currentIndex = index;
-    document.getElementById("carouselImage").src = images[index];
-    document.getElementById("carouselModal").style.display = "flex";
-  }
-
-  function closeCarousel() {
-    document.getElementById("carouselModal").style.display = "none";
-  }
-
-  function changeImage(direction) {
-    currentIndex = (currentIndex + direction + images.length) % images.length;
-    document.getElementById("carouselImage").src = images[currentIndex];
-  }
-</script>
-
-<footer>
-  © 2025 – Locations de charme à Gérardmer
-</footer>
-
+  <!-- Bootstrap JS bundle (obligatoire) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
