--- a/chalet.html
+++ b/chalet.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Chalet cocooning – Gérardmer</title>
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap CSS (obligatoire pour le carousel) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
   <!-- Ton CSS -->
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+  <!-- NAVBAR -->
   <nav class="navbar">
     <div class="nav-container">
       <div class="logo">Gérardmer Locations</div>
@@ -28,37 +29,40 @@
   <main class="section">
     <h2>Chalet cocooning</h2>
 
-    <!-- ✅ Click only: pas de data-bs-ride + interval false -->
+    <p class="text-center mb-4"><strong>Chalet Gérardmer</strong></p>
+
+    <!-- ✅ CAROUSEL (clic uniquement : interval false, pas de ride) -->
     <div id="carouselChalet"
-         class="carousel slide"
+         class="carousel slide mx-auto"
          data-bs-interval="false"
          data-bs-touch="false"
-         data-bs-keyboard="false">
+         data-bs-keyboard="false"
+         style="max-width: 900px;">
 
-      <!-- Indicateurs cliquables -->
+      <!-- Indicateurs (optionnels) -->
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselChalet" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselChalet" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselChalet" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
 
-      <div class="carousel-inner">
+      <div class="carousel-inner rounded-4 overflow-hidden shadow">
         <div class="carousel-item active">
-          <img src="img/Designer.png" class="d-block w-100" alt="Chalet – photo 1">
+          <img src="img/Designer.png" class="d-block w-100" alt="Chalet - Photo 1" style="max-height: 520px; object-fit: cover;">
           <div class="carousel-caption d-none d-md-block">
             <h5>Photo 1</h5>
           </div>
         </div>
 
         <div class="carousel-item">
-          <img src="img/Designer.png" class="d-block w-100" alt="Chalet – photo 2">
+          <img src="img/Designer.png" class="d-block w-100" alt="Chalet - Photo 2" style="max-height: 520px; object-fit: cover;">
           <div class="carousel-caption d-none d-md-block">
             <h5>Photo 2</h5>
           </div>
         </div>
 
         <div class="carousel-item">
-          <img src="img/Designer.png" class="d-block w-100" alt="Chalet – photo 3">
+          <img src="img/Designer.png" class="d-block w-100" alt="Chalet - Photo 3" style="max-height: 520px; object-fit: cover;">
           <div class="carousel-caption d-none d-md-block">
             <h5>Photo 3</h5>
           </div>
@@ -70,17 +74,51 @@
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Précédent</span>
       </button>
-
       <button class="carousel-control-next" type="button" data-bs-target="#carouselChalet" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Suivant</span>
       </button>
     </div>
+
+    <!-- INFOS (repris de ta page) -->
+    <h3 class="mt-5">Informations</h3>
+    <ul class="mt-3">
+      <li>👥 Jusqu’à 6 personnes</li>
+      <li>🛏️ 3 chambres</li>
+      <li>🛁 1 salle de bain</li>
+      <li>🔥 Poêle à bois</li>
+      <li>🌲 Terrasse avec vue forêt</li>
+      <li>🚗 Parking privé</li>
+    </ul>
+
+    <p class="mt-3">
+      Chalet chaleureux et entièrement équipé, idéal pour un séjour cocooning au cœur des Vosges,
+      été comme hiver.
+    </p>
+
+    <!-- DISPONIBILITÉS (repris de ta page) -->
+    <h3 class="mt-5">Disponibilités</h3>
+
+    <div class="row g-3 mt-2" style="max-width: 520px;">
+      <div class="col-12 col-md-6">
+        <label for="arrivee-chalet" class="form-label">Arrivée :</label>
+        <input id="arrivee-chalet" type="date" class="form-control">
+      </div>
+      <div class="col-12 col-md-6">
+        <label for="depart-chalet" class="form-label">Départ :</label>
+        <input id="depart-chalet" type="date" class="form-control">
+      </div>
+    </div>
+
+    <a href="#" class="btn mt-3">Réserver</a>
   </main>
 
-  <footer>© 2025 – Locations de charme à Gérardmer</footer>
+  <footer>
+    © 2025 – Locations de charme à Gérardmer
+  </footer>
 
   <!-- Bootstrap JS bundle (obligatoire) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+``
