--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<nav class="navbar">
+<nav class="site-navbar">
   <div class="nav-container">
     <div class="logo">Gérardmer Locations</div>
     <ul class="nav-links">
