--- a/chalet.html
+++ b/chalet.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-- NAVBAR -->
-  <nav class="navbar">
+  <nav class="site-navbar">
     <div class="nav-container">
       <div class="logo">Gérardmer Locations</div>
       <ul class="nav-links">
