--- a/proximite.html
+++ b/proximite.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<nav class="navbar">
+<nav class="site-navbar">
   <div class="nav-container">
     <div class="logo">Gérardmer Locations</div>
     <ul class="nav-links">
