--- a/chalet.html
+++ b/chalet.html
@@ -32,12 +32,12 @@
     <p class="text-center mb-4"><strong>Chalet Gérardmer</strong></p>
 
     <!-- ✅ CAROUSEL (clic uniquement : interval false, pas de ride) -->
-    <div id="carouselChalet"
-         class="carousel slide mx-auto"
-         data-bs-interval="false"
-         data-bs-touch="false"
-         data-bs-keyboard="false"
-         style="max-width: 900px;">
+      <div id="carouselChalet"
+        class="carousel slide carousel-fade"
+        data-bs-interval="false"
+        data-bs-touch="false"
+        data-bs-keyboard="false"
+        style="max-width: 900px;">
 
       <!-- Indicateurs (optionnels) -->
       <div class="carousel-indicators">
