--- a/chalet.html
+++ b/chalet.html
@@ -1,123 +1,254 @@
 
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chalet cocooning – Gérardmer</title>
+/* ================================
+   RESET & BASE
+================================ */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  <!-- Bootstrap CSS (obligatoire pour le carousel) -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+/* Windows + Chrome : largeur stable (scrollbar toujours présente) */
+html{
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 
-  <!-- Ton CSS -->
-  <link rel="stylesheet" href="css/style.css">
-</head>
+body{
+  margin: 0;
+  min-height: 100vh;
+  font-family: "Segoe UI", sans-serif;
+  background-color: #f7f3ef;
+  color: #3a2a1f;
 
-<body>
-  <!-- NAVBAR -->
-  <nav class="site-navbar">
-    <div class="nav-container">
-      <div class="logo">Gérardmer Locations</div>
-      <ul class="nav-links">
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="logements.html">Logements</a></li>
-        <li><a href="proximite.html">À proximité</a></li>
-      </ul>
-    </div>
-  </nav>
+  display: flex;
+  flex-direction: column;
 
-  <main class="section">
-    <h2>Chalet cocooning</h2>
+  overflow-x: hidden;
+}
 
-    <p class="text-center mb-4"><strong>Chalet Gérardmer</strong></p>
+main{
+  flex: 1 0 auto;
+}
 
-    <!-- ✅ CAROUSEL (clic uniquement : interval false, pas de ride) -->
-      <div id="carouselChalet"
-        class="carousel slide carousel-fade"
-        data-bs-interval="false"
-        data-bs-touch="false"
-        data-bs-keyboard="false"
-        style="max-width: 900px;">
+/* ================================
+   NAVBAR
+================================ */
+.site-navbar{
+  background: linear-gradient(to right, #2b1e16, #3b2a20);
+  padding: 1rem 2rem;
+  position: sticky;
+  top: 0;
+  z-index: 2000;
+}
 
-      <!-- Indicateurs (optionnels) -->
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselChalet" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselChalet" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselChalet" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
+.nav-container{
+  max-width: 1200px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-      <div class="carousel-inner rounded-4 overflow-hidden shadow">
-        <div class="carousel-item active">
-          <img src="img/Designer.png" class="d-block w-100" alt="Chalet - Photo 1" style="max-height: 520px; object-fit: cover;">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Photo 1</h5>
-          </div>
-        </div>
+.logo{
+  color: white;
+  font-weight: 600;
+  font-size: 1.1rem;
+}
 
-        <div class="carousel-item">
-          <img src="img/Designer.png" class="d-block w-100" alt="Chalet - Photo 2" style="max-height: 520px; object-fit: cover;">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Photo 2</h5>
-          </div>
-        </div>
+.nav-links{
+  list-style: none;
+  display: flex;
+  gap: 1.5rem;
+  margin: 0;
+  padding: 0;
+}
 
-        <div class="carousel-item">
-          <img src="img/Designer.png" class="d-block w-100" alt="Chalet - Photo 3" style="max-height: 520px; object-fit: cover;">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Photo 3</h5>
-          </div>
-        </div>
-      </div>
+.nav-links a{
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+}
 
-      <!-- Contrôles -->
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselChalet" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Précédent</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselChalet" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Suivant</span>
-      </button>
-    </div>
+.nav-links a:hover{
+  text-decoration: underline;
+}
 
-    <!-- INFOS (repris de ta page) -->
-    <h3 class="mt-5">Informations</h3>
-    <ul class="mt-3">
-      <li>👥 Jusqu’à 6 personnes</li>
-      <li>🛏️ 3 chambres</li>
-      <li>🛁 1 salle de bain</li>
-      <li>🔥 Poêle à bois</li>
-      <li>🌲 Terrasse avec vue forêt</li>
-      <li>🚗 Parking privé</li>
-    </ul>
+/* ================================
+   HERO
+================================ */
+.hero{
+  height: 70vh;
+  background: url("../img/Designer.png") center/cover no-repeat;
+  position: relative;
+}
 
-    <p class="mt-3">
-      Chalet chaleureux et entièrement équipé, idéal pour un séjour cocooning au cœur des Vosges,
-      été comme hiver.
-    </p>
+.overlay{
+  background: rgba(0,0,0,0.55);
+  color: white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
+}
 
-    <!-- DISPONIBILITÉS (repris de ta page) -->
-    <h3 class="mt-5">Disponibilités</h3>
+.overlay h1{
+  font-size: 2.4rem;
+  margin-bottom: 1rem;
+}
 
-    <div class="row g-3 mt-2" style="max-width: 520px;">
-      <div class="col-12 col-md-6">
-        <label for="arrivee-chalet" class="form-label">Arrivée :</label>
-        <input id="arrivee-chalet" type="date" class="form-control">
-      </div>
-      <div class="col-12 col-md-6">
-        <label for="depart-chalet" class="form-label">Départ :</label>
-        <input id="depart-chalet" type="date" class="form-control">
-      </div>
-    </div>
+.overlay p{
+  font-size: 1.1rem;
+  margin-bottom: 1.5rem;
+}
 
-    <a href="#" class="btn mt-3">Réserver</a>
-  </main>
+.btn-primary{
+  background: #7a4b35;
+  color: white;
+  padding: 0.8rem 2rem;
+  border-radius: 30px;
+  text-decoration: none;
+}
 
-  <footer>
-    © 2025 – Locations de charme à Gérardmer
-  </footer>
+.btn-primary:hover{
+  background: #9a6245;
+}
 
-  <!-- Bootstrap JS bundle (obligatoire) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+/* ================================
+   SECTIONS
+================================ */
+.section{
+  max-width: 1200px;
+  margin: 4rem auto;
+  padding: 0 1.5rem;
+}
+
+.section h2{
+  text-align: center;
+  margin-bottom: 2rem;
+  color: #6b3e26;
+}
+
+/* ================================
+   LOGEMENTS - CARDS
+================================ */
+.cards{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.card{
+  background: #fffaf5;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+  transition: transform 0.3s;
+}
+
+.card:hover{
+  transform: translateY(-5px);
+}
+
+.card img{
+  width: 100%;
+  height: 260px;
+  object-fit: cover;
+  display: block;
+}
+
+.card-content{
+  padding: 1.5rem;
+  text-align: center;
+}
+
+.card-content h3{
+  margin-bottom: 0.5rem;
+}
+
+.card-content p{
+  font-size: 0.95rem;
+}
+
+.btn{
+  display: inline-block;
+  margin-top: 1rem;
+  padding: 0.6rem 1.6rem;
+  background: #5a3a2b;
+  color: white;
+  border-radius: 30px;
+  text-decoration: none;
+}
+
+.btn:hover{
+  background: #7a4b35;
+}
+
+/* ================================
+   FOOTER
+================================ */
+footer{
+  background: linear-gradient(to right, #2b1e16, #3b2a20);
+  color: white;
+  text-align: center;
+  padding: 1.2rem;
+  margin-top: auto;
+}
+
+/* ================================
+   RESPONSIVE
+================================ */
+@media (max-width: 900px){
+  .cards{ grid-template-columns: 1fr; }
+}
+
+@media (max-width: 768px){
+  .nav-container{
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .hero{ height: 60vh; }
+  .overlay h1{ font-size: 1.9rem; }
+}
+
+/* ================================
+   CAROUSEL (FIX "ZOOM" Windows/Chrome)
+================================ */
+
+/* centre le carousel */
+.carousel{
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+/* ✅ Hauteur fixe sur PC : plus de recalcul pendant transition */
+.carousel .carousel-inner{
+  height: 520px;                 /* = ta valeur max-height */
+  overflow: hidden;
+  border-radius: 1rem;           /* équivalent rounded-4 */
+  box-shadow: 0 10px 25px rgba(0,0,0,0.15); /* équivalent shadow */
+}
+
+/* Mobile : hauteur plus petite */
+@media (max-width: 768px){
+  .carousel .carousel-inner{
+    height: 320px;
+  }
+}
+
+/* L'image remplit la zone */
+.carousel-img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
+/* Optionnel : supprime le focus ring Bootstrap sur les flèches (visuel) */
+.carousel-control-prev:focus,
+.carousel-control-next:focus{
+  box-shadow: none !important;
+}
