--- a/chalet.html
+++ b/chalet.html
@@ -48,21 +48,21 @@
 
       <div class="carousel-inner rounded-4 overflow-hidden shadow">
         <div class="carousel-item active">
-          <img src="img/Designer.png" class="d-block w-100" alt="Chalet - Photo 1">
+          <img src="img/Designer.png" class="d-block w-100 carousel-img" alt="Chalet - Photo 1">
           <div class="carousel-caption d-none d-md-block">
             <h5>Photo 1</h5>
           </div>
         </div>
 
         <div class="carousel-item">
-          <img src="img/Designer.png" class="d-block w-100" alt="Chalet - Photo 2">
+          <img src="img/Designer.png" class="d-block w-100 carousel-img" alt="Chalet - Photo 2">
           <div class="carousel-caption d-none d-md-block">
             <h5>Photo 2</h5>
           </div>
         </div>
 
         <div class="carousel-item">
-          <img src="img/Designer.png" class="d-block w-100" alt="Chalet - Photo 3">
+          <img src="img/Designer.png" class="d-block w-100 carousel-img" alt="Chalet - Photo 3">
           <div class="carousel-caption d-none d-md-block">
             <h5>Photo 3</h5>
           </div>
