--- a/chalet.html
+++ b/chalet.html
@@ -1,32 +1,8 @@
+    ---
+    layout: default
+    title: Chalet cocooning – Gérardmer
+    ---
 
-<!doctype html>
-<html lang="fr">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chalet cocooning – Gérardmer</title>
-
-  <!-- Bootstrap CSS (obligatoire pour le carousel) -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-
-  <!-- Ton CSS -->
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-  <!-- NAVBAR -->
-  <nav class="site-navbar">
-    <div class="nav-container">
-      <div class="logo">Gérardmer Locations</div>
-      <ul class="nav-links">
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="logements.html">Logements</a></li>
-        <li><a href="proximite.html">À proximité</a></li>
-      </ul>
-    </div>
-  </nav>
-
-  <main class="section">
     <h2>Chalet cocooning</h2>
 
     <p class="text-center mb-4"><strong>Chalet Gérardmer</strong></p>
@@ -111,13 +87,4 @@
     </div>
 
     <a href="#" class="btn mt-3">Réserver</a>
-  </main>
-
-  <footer>
-    © 2025 – Locations de charme à Gérardmer
-  </footer>
-
-  <!-- Bootstrap JS bundle (obligatoire) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
 </html>
