--- a/index.html
+++ b/index.html
@@ -1,25 +1,8 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Locations de charme à Gérardmer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Location saisonnière à Gérardmer – Chalet et Maison premium">
-  <link rel="stylesheet" href="css/style.css">
-</head>
 
-<body>
-
-<nav class="site-navbar">
-  <div class="nav-container">
-    <div class="logo">Gérardmer Locations</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="logements.html">Logements</a></li>
-      <li><a href="proximite.html">À proximité</a></li>
-    </ul>
-  </div>
-</nav>
+---
+layout: default
+title: Locations de charme à Gérardmer
+---
 
 <header class="hero">
   <div class="overlay">
@@ -37,10 +20,3 @@
     pour un séjour inoubliable à Gérardmer.
   </p>
 </section>
-
-<footer>
-  <p>© 2025 – Locations de charme à Gérardmer</p>
-</footer>
-
-</body>
-</html>
