--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 ---
 layout: default
-title: Locations de charme à Gérardmer
+title: Locations de charme à Gérardmer !
 ---
 
 <header class="hero">
