--- a/logements.html
+++ b/logements.html
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Nos logements – Gérardmer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-
-<nav class="site-navbar">
-  <div class="nav-container">
-    <div class="logo">Gérardmer Locations</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="logements.html">Logements</a></li>
-      <li><a href="proximite.html">À proximité</a></li>
-    </ul>
-  </div>
-</nav>
+---
+layout: default
+title: Logements
+---
 
 <section class="section">
   <h2>Nos logements</h2>
@@ -43,10 +26,3 @@
     </div>
   </div>
 </section>
-
-<footer>
-  <p>© 2025 – Locations de charme à Gérardmer</p>
-</footer>
-
-</body>
-</html>
