--- a/proximite.html
+++ b/proximite.html
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>À proximité – Gérardmer</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-
-<body>
-
-<nav class="site-navbar">
-  <div class="nav-container">
-    <div class="logo">Gérardmer Locations</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="logements.html">Logements</a></li>
-      <li><a href="proximite.html">À proximité</a></li>
-    </ul>
-  </div>
-</nav>
+---
+layout: default
+title: À proximité
+---
 
 <section class="section" style="margin-top:70px;">
   <h2>À proximité de Gérardmer</h2>
@@ -32,10 +15,3 @@
     <li>🧖 Spas & bien-être</li>
   </ul>
 </section>
-
-<footer>
-  <p>© 2025 – Locations de charme à Gérardmer</p>
-</footer>
-
-</body>
-</html>
