--- a/chalet.html
+++ b/chalet.html
@@ -2,6 +2,9 @@
 layout: default
 title: Chalet cocooning – Gérardmer
 ---
+
+{% include detail_nav.html %}
+
     <main class="section">
         <h2>Chalet cocooning</h2>
     
