--- a/chalet.html
+++ b/chalet.html
@@ -3,7 +3,7 @@ layout: default
 title: Chalet cocooning – Gérardmer
 ---
 
-{% include detail_nav.html %}
+{% include back_to_list.html %}
 
     <main class="section">
         <h2>Chalet cocooning</h2>
