--- a/chalet.html
+++ b/chalet.html
@@ -12,8 +12,7 @@ title: Chalet cocooning – Gérardmer
 {% include gallery_from_folder.html
    folder="/img/chalet"
    id="chalet"
-   title="Espace de vie du chalet norvégien"
-   thumbs_folder="/img/chalet/thumbs"
+   title="Espace de vie du chalet"
    max_width="900px"
 %}
 
