--- a/chalet.html
+++ b/chalet.html
@@ -9,7 +9,7 @@ title: Chalet cocooning – Gérardmer
 
 <p class="text-center mb-4"><strong>Chalet Gérardmer</strong></p>
 
-{% include gallery_from_folder.html folder="/img/chalet" gid="chalet" title="Espace de vie du chalet" max_width="900px" %}
+{% include gallery_from_folder.html folder="/img/chalet" title="Espace de vie du chalet" max_width="900px" %}
 
 <h3 class="mt-5">Informations</h3>
 <ul class="mt-3">
