--- a/chalet.html
+++ b/chalet.html
@@ -6,7 +6,7 @@ title: Chalet cocooning – Gérardmer
 {% include back_under_nav.html %}
 
 
-<main class="container py-4 text-center">
+<main class="section">
   <h2>Chalet cocooning</h2>
   
   <p class="text-center mb-4"><strong>Chalet Gérardmer</strong></p>
