--- a/chalet.html
+++ b/chalet.html
@@ -10,8 +10,10 @@ title: Chalet cocooning – Gérardmer
   <h2>Chalet cocooning</h2>
   
   <p class="text-center mb-4"><strong>Chalet Gérardmer</strong></p>
-  
+
+  <div class="d-flex justify-content-center">
   {% include gallery_from_folder.html folder="/img/chalet" id="chalet" title="Espace de vie du chalet" max_width="900px" %}
+  </div>
   
   <h3 class="mt-5">Informations</h3>
   <ul class="mt-3">
